--- a/style.css
+++ b/style.css
@@ -78,6 +78,10 @@ input[type=number] {
     margin-top: 10px;
     margin-left: 10px
 }
+.card-body {
+    background-color: rgb(0 0 0 / 0%);
+    border: none;
+}
 
 @media (max-width: 770px) {
     section div {  
